--- a/Choir/index.html
+++ b/Choir/index.html
@@ -40,10 +40,14 @@
 Hoag Recital Hall, CSU Pueblo</h3>
 <p>The season opens with a lighthearted concert featuring a variety of music, including the lilting strains of Brahms&#8217; <em>Liebleider Waltzes</em> and his <em>Zigeunerlieder </em>(love songs and Gypsy songs).</p>
 <p>Guest artists will be the Freemont Civic Choir, under the direction of Charles Rann.</p>
+</section>
+<section>
 <h2>Salvation</h2>
 <h3>February 26 &nbsp; &nbsp; 7:30 p.m.<br />
 Hoag Recital Hall, CSU Pueblo</h3>
 <p>The majesty of Handel&#8217;s <em>Messiah</em> unfolds as excerpts from the Easter portion are presented with orchestral accompaniment. &nbsp;The CSU Pueblo Concert Choir and Pueblo West High School Choir join the Choral in performing this great Lenten masterpiece</p>
+</section>
+<section>
 <h2>Shimmering Silver Gala</h2>
 <h3>April 30 &nbsp; &nbsp; 7:30 p.m.<br />
 Pueblo Convention Center</h3>
