Change image id and alt text

--- a/Web Site/Site.html
+++ b/Web Site/Site.html
@@ -8,14 +8,14 @@
 
 <body>
   <header>
-    <a href="#"><img src="Images/Logo.png" alt="Insert Logo Here" width="180" id="Insert_logo"/></a>
-        <nav>
-    <ul class="nav">
+    <a href="#"><img src="Images/Logo.png" alt="Logo" width="180" id="Logo"/></a>
+   <nav>
+   	<ul class="nav">
       <li><a href="#">Characters</a></li>
       <li><a href="#">Powerups</a></li>
       <li><a href="#">Backgrounds</a></li>
-    </ul>
-    </nav>
+   	</ul>
+   </nav>
   </header>
   <article class="content">
     <h1>Super Mario 3D World</h1>
