Id for column area

--- a/Web Site/Site.html
+++ b/Web Site/Site.html
@@ -23,7 +23,7 @@
      <h2>Save the sprixies</h2>
       <p>Big, bad Bowser and his crew have invaded the peaceful Sprixie Kingdom. Now it's up to Mario and his friends to rescue the Sprixies by fighting their way through a vast new kingdom. Play solo or with up to three friends in this new Mario platforming adventure!</p>
     </section>
-    <section>
+    <section id="Characters">
       <h2>Characters</h2>
       <p>Mario’s back—and he’s brought friends. Choose one of four characters and master their special skills as you run, jump, swim, and scamper your way through this wild adventure.</p>
       <p>When Mario gets a call for help, he leaps into action. Help him make his way through perilous challenges and tons of baddies.</p>
