Removed extra id's

--- a/Web Site/Site.html
+++ b/Web Site/Site.html
@@ -44,19 +44,19 @@
     <h2>Backgrounds</h2>
     <ul>
     	<li>
-        	<img src="Images/meme-1.jpg" alt="Insert Here" width="180" id="Insert"/>
+        	<img src="Images/meme-1.jpg" alt="Insert Here" width="180"/>
         </li>
         <li>
-        	<img src="Images/meme-2.jpg" alt="Insert Here" width="180" id="Insert"/>
+        	<img src="Images/meme-2.jpg" alt="Insert Here" width="180" />
         </li>
         <li>
-        	<img src="Images/meme-3.jpg" alt="Insert Here" width="180" id="Insert"/>
+        	<img src="Images/meme-3.jpg" alt="Insert Here" width="180" />
         </li>
         <li>
-        	<img src="Images/meme-4.jpg" alt="Insert Here" width="180" id="Insert"/>
+        	<img src="Images/meme-4.jpg" alt="Insert Here" width="180"/>
         </li>
         <li>
-        	<img src="Images/meme-5.jpg" alt="Insert Here" width="180" id="Insert"/>
+        	<img src="Images/meme-5.jpg" alt="Insert Here" width="180"/>
         </li>
     </ul>
   </aside>
