Change Image sizes

--- a/MySite_Cain_Preston/Site.html
+++ b/MySite_Cain_Preston/Site.html
@@ -61,8 +61,10 @@
     </ul>
   </aside>
   <footer>
-  	<strong>
-    <p>Additional accessories required for multiplayer mode. Sold separately.</p>
+    <p>
+  	<strong>Additional accessories required for multiplayer mode. Sold separately.
+    </strong>
+    </p>
     <p>Broadband Internet access required for online features. For more info, go to <a href="support.nintendo.com">support.nintendo.com</a>.</p>
     </strong>
     <p>© 2013 Nintendo. Nintendo properties are trademark of Nintendo.</p>
