--- a/MySite_Cain_Preston/index.html
+++ b/MySite_Cain_Preston/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Super Mario 3D World</title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link rel='stylesheet' media='(min-width: 961px)' href='css/style.css' />
+<link rel='stylesheet' media='(min-width: 768px) and (max-width: 960px)' href='css/medium.css' />
+<link rel='stylesheet' media='(max-width: 767px)' href='css/small.css' />
 </head>
 
 <body>
