Attempting to change screen size css

--- a/MySite_Cain_Preston/index.html
+++ b/MySite_Cain_Preston/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Super Mario 3D World</title>
-<link rel='stylesheet' media='(min-width: 961px)' href='css/style.css' />
-<link rel='stylesheet' media='(min-width: 768px) and (max-width: 960px)' href='css/medium.css' />
-<link rel='stylesheet' media='(max-width: 767px)' href='css/small.css' />
+<link rel='stylesheet' href='css/style.css' />
 </head>
 
 <body>
@@ -68,7 +66,6 @@
     </strong>
     </p>
     <p>Broadband Internet access required for online features. For more info, go to <a href="support.nintendo.com">support.nintendo.com</a>.</p>
-    </strong>
     <p>© 2013 Nintendo. Nintendo properties are trademark of Nintendo.</p>
     <address>
       Address Content
