--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-    <a href="#"><img src="Images/Logo.png" alt="Logo" width="180" id="Logo"/></a>
+    <a href="#"><img src="images/Logo.png" alt="Logo" width="180" id="Logo"/></a>
    <nav>
    	<ul class="nav">
       <li><a href="#">Characters</a></li>
@@ -44,19 +44,19 @@
     <h2>Backgrounds</h2>
     <ul>
     	<li>
-        	<img src="Images/meme-1.jpg" alt="Insert Here" width="180"/>
+        	<img src="images/meme-1.jpg" alt="Insert Here" width="180"/>
         </li>
         <li>
-        	<img src="Images/meme-2.jpg" alt="Insert Here" width="180" />
+        	<img src="images/meme-2.jpg" alt="Insert Here" width="180" />
         </li>
         <li>
-        	<img src="Images/meme-3.jpg" alt="Insert Here" width="180" />
+        	<img src="images/meme-3.jpg" alt="Insert Here" width="180" />
         </li>
         <li>
-        	<img src="Images/meme-4.jpg" alt="Insert Here" width="180"/>
+        	<img src="images/meme-4.jpg" alt="Insert Here" width="180"/>
         </li>
         <li>
-        	<img src="Images/meme-5.jpg" alt="Insert Here" width="180"/>
+        	<img src="images/meme-5.jpg" alt="Insert Here" width="180"/>
         </li>
     </ul>
   </aside>
