--- a/index.html
+++ b/index.html
@@ -35,6 +35,71 @@
       <h2>An adventure so big, it is only possible on Wii U</h2>
       <p>Play with up to three friends at once for multiplayer Mario magic! Players can jump in at any time to lend a hand or help find hidden stars—or compete for the most coins and win the crown at the end of each level.</p>
     </section>
+    <table cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<th colspan="2">Aggregate scores</th>
+</tr>
+<tr>
+<th>Aggregator</th>
+<th>Score</th>
+</tr>
+<tr>
+<td>GameRankings</td>
+<td>93.44%</td>
+</tr>
+<tr>
+<td>Metacritic</td>
+<td>93/100</td>
+</tr>
+<tr>
+<th colspan="32">Review scores</th>
+</tr>
+<tr>
+<th>Publication</th>
+<th colspan="25">Score</th>
+</tr>
+<tr>
+<td>Destructoid</td>
+<td>10/10</td>
+</tr>
+<tr>
+<td>Edge</td>
+<td>9/10</td>
+</tr>
+<tr>
+<td>Eurogamer</td>
+<td>10/10</td>
+</tr>
+<tr>
+<td>Famitsu</td>
+<td>38/40</td>
+</tr>
+<tr>
+<td>Game Informer</td>
+<td>9.25/10</td>
+</tr>
+<tr>
+<td>GamesRadar</td>
+<td><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"></td>
+</tr>
+<tr>
+<td>GameSpot</td>
+<td>9/10</td>
+</tr>
+<tr>
+<td>IGN</td>
+<td>9.6/10</td>
+</tr>
+<tr>
+<td>Joystiq</td>
+<td><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"></td>
+</tr>
+<tr>
+<td>Nintendo World Report</td>
+<td>10/10</td>
+</tr>
+</tbody></table>
     </div>
   <aside>
     <h2>Powerups</h2>
