--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>An adventure so big, it is only possible on Wii U</h2>
       <p>Play with up to three friends at once for multiplayer Mario magic! Players can jump in at any time to lend a hand or help find hidden stars—or compete for the most coins and win the crown at the end of each level.</p>
     </section>
-    <table cellpadding="0" cellspacing="0">
+    <table cellpadding="1" cellspacing="0">
 <tbody>
 <tr>
 <th colspan="2">Aggregate scores</th>
@@ -81,7 +81,7 @@
 </tr>
 <tr>
 <td>GamesRadar</td>
-<td><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"></td>
+<td><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_half.png"></td>
 </tr>
 <tr>
 <td>GameSpot</td>
@@ -93,7 +93,7 @@
 </tr>
 <tr>
 <td>Joystiq</td>
-<td><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"><img width="11" height="11"></td>
+<td><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"><img src="images/11px-Star_full.png"></td>
 </tr>
 <tr>
 <td>Nintendo World Report</td>
