--- a/index.html
+++ b/index.html
@@ -100,6 +100,25 @@
 <td>10/10</td>
 </tr>
 </tbody></table>
+<div id="form-main">
+  <div id="form-div">
+  <h2>Sign up for updates!</h2>
+    <form class="form" id="form1">
+      
+      <p class="name">
+        <input name="name" type="text" class="feedback-input" placeholder="Name" id="name" />
+      </p>
+      
+      <p class="email">
+        <input name="email" type="text" class="feedback-input" id="email" placeholder="Email" />
+      </p>
+      <div class="submit">
+        <input type="submit" value="SEND" id="button-blue"/>
+        <div class="ease"></div>
+      </div>
+    </form>
+  </div>
+  </div>
     </div>
   <aside>
     <h2>Powerups</h2>
