--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 
 <body>
+<a href="#" title="Home" target="_self">Home</a>
+<a href="search.html" title="Search">Search</a>
+<a href="results.html" title="Results">Results</a>
+<a href="favorites.html" title="Favorites">Favorites</a>
+<a href="login.html" title="Login">Login</a>
+<a href="signup.html" title="Sign Up">Sign Up</a>
 </body>
 </html>
