--- a/signup.html
+++ b/signup.html
@@ -7,5 +7,11 @@
 </head>
 
 <body>
+<a href="index.html">Home</a>
+<a href="search.html">Search</a>
+<a href="results.html">Results</a>
+<a href="favorites.html">Favorites</a>
+<a href="login.html">Login</a>
+<a href="#" target="_self">Sign Up</a>
 </body>
 </html>
