--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<img src="Neil_Lane_Logo.svg"/>
 <a href="#" target="_self">Home</a>
 <a href="search.html">Search</a>
 <a href="results.html">Results</a>
