--- a/search.html
+++ b/search.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<img src="Neil_Lane_Logo.svg"/>
 <a href="index.html">Home</a>
 <a href="#" target="_self">Search</a>
 <a href="results.html">Results</a>
