--- a/search.html
+++ b/search.html
@@ -7,12 +7,14 @@
 </head>
 
 <body>
-<img src="Neil_Lane_Logo.svg"/>
+<img id="Logo" src="Neil_Lane_Logo.svg"/>
+<nav>
 <a href="index.html">Home</a>
 <a href="#" target="_self">Search</a>
 <a href="results.html">Results</a>
 <a href="favorites.html">Favorites</a>
 <a href="login.html">Login</a>
 <a href="signup.html">Sign Up</a>
+</nav>
 </body>
 </html>
