--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 <img id="Logo" src="Neil_Lane_Logo.svg"/>
+<div id="content">
 <nav>
 <a href="#" target="_self">Home</a>
 <a href="search.html">Search</a>
@@ -16,6 +17,6 @@
 <a href="login.html">Login</a>
 <a href="signup.html">Sign Up</a>
 </nav>
-
+</div>
 </body>
 </html>
