started on first 2 pages

--- a/favorites.html
+++ b/favorites.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-<img id="Logo" src="Neil_Lane_Logo.svg"/>
+<header>
+<img id="Logo" src="Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
 <nav>
 <a href="index.html">Home</a>
-<a href="search.html">Search</a>
 <a href="results.html">Results</a>
-<a href="#" target="_self">Favorites</a>
+<a href="details.html">Details</a>
+<a href="favorites.html">Favorites</a>
 <a href="login.html">Login</a>
 <a href="signup.html">Sign Up</a>
 </nav>
+</header>
 </body>
 </html>
