--- a/results.html
+++ b/results.html
@@ -7,14 +7,45 @@
 </head>
 
 <body>
-<img id="Logo" src="Neil_Lane_Logo.svg"/>
+<header>
+<img id="Logo" src="Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
 <nav>
 <a href="index.html">Home</a>
-<a href="search.html">Search</a>
-<a href="#" target="_self">Results</a>
+<a href="results.html">Results</a>
+<a href="details.html">Details</a>
 <a href="favorites.html">Favorites</a>
 <a href="login.html">Login</a>
 <a href="signup.html">Sign Up</a>
 </nav>
+</header>
+
+<section id="results">
+
+<div>
+<img src="Images/Leica.png"/>
+<p>Leica MP .72 Rangefinder Film Camera, Black</p>
+</div>
+
+<div>
+<img src="Images/Fujifilm.png"/>
+<p>Fujifilm GF670 Professional Camera with Lens</p>
+</div>
+
+<div>
+<img src="Images/Horseman.png"/>
+<p>Horseman SW-612 Pro Medium Format Panorama Camera with 65mm Grandagon-N Lens</p>
+</div>
+
+<div>
+<img src="Images/Toyo.png"/>
+<p>Toyo 45CF Field Camera</p>
+</div>
+
+<div>
+<img src="Images/Nikon.png"/>
+<p>Nikon FM-10 Body with 35-70 f/3.5-4.8 and Black and White Filters</p>
+</div>
+
+</section>
 </body>
 </html>
