--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
 </head>
 
 <body>
-<img id="Logo" src="Neil_Lane_Logo.svg"/>
-<div id="content">
+<header>
+<img id="Logo" src="Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
 <nav>
-<a href="#" target="_self">Home</a>
-<a href="search.html">Search</a>
+<a href="index.html">Home</a>
 <a href="results.html">Results</a>
+<a href="details.html">Details</a>
 <a href="favorites.html">Favorites</a>
 <a href="login.html">Login</a>
 <a href="signup.html">Sign Up</a>
 </nav>
-</div>
+</header>
+<section>
+<h1 id="huge">
+Find the best cameras with <br/>Neil Lane
+</h1>
+<form>
+<input type="search" />
+<button type="submit">
+<a href="search.html">
+Search Now!</a>
+</button>
+</form>
+</section>
 </body>
 </html>
