--- a/details.html
+++ b/details.html
@@ -18,5 +18,17 @@
 <a href="signup.html">Sign Up</a>
 </nav>
 </header>
+<section id="white">
+<img src="Images/Leica_Large.png"/>
+<h2>Leica MP .72 Rangefinder Film Camera, Black</h2>
+Item: LC4916   Mfr: 10302
+<br/>
+By Leica
+<button><a href="favorites.html">Add to favorites</a></button>
+<br/>
+This product hasn't been rated yet. <a href="login.html">Write a Review</a>
+<br/>
+$ 4,995.00
+</section>
 </body>
 </html>
