--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Find the best cameras with <br/>Neil Lane
 <form>
 <input type="search" />
 <button type="submit">
-<a href="search.html">
+<a href="results.html">
 Search Now!</a>
 </button>
 </form>
