--- a/results.html
+++ b/results.html
@@ -19,31 +19,41 @@
 </nav>
 </header>
 
-<section id="results">
+<section id="white">
 
 <div>
+<a href="details.html">
 <img src="Images/Leica.png"/>
 <p>Leica MP .72 Rangefinder Film Camera, Black</p>
+</a>
 </div>
 
 <div>
+<a href="details.html">
 <img src="Images/Fujifilm.png"/>
 <p>Fujifilm GF670 Professional Camera with Lens</p>
+</a>
 </div>
 
 <div>
+<a href="details.html">
 <img src="Images/Horseman.png"/>
 <p>Horseman SW-612 Pro Medium Format Panorama Camera with 65mm Grandagon-N Lens</p>
+</a>
 </div>
 
 <div>
+<a href="details.html">
 <img src="Images/Toyo.png"/>
 <p>Toyo 45CF Field Camera</p>
+</a>
 </div>
 
 <div>
+<a href="details.html">
 <img src="Images/Nikon.png"/>
 <p>Nikon FM-10 Body with 35-70 f/3.5-4.8 and Black and White Filters</p>
+</a>
 </div>
 
 </section>
