Full site complete

--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
 <a href="signup.html">Sign Up</a>
 </nav>
 </header>
-<section id="white">
+<section class="white" id="details">
 <img src="Images/Leica_Large.png"/>
 <h2>Leica MP .72 Rangefinder Film Camera, Black</h2>
 Item: LC4916   Mfr: 10302
