--- a/favorites.html
+++ b/favorites.html
@@ -18,5 +18,12 @@
 <a href="signup.html">Sign Up</a>
 </nav>
 </header>
+<section class="white" id="favorites">
+<h1>Favorites</h1>
+<a href="details.html">
+<img src="Images/Leica.png"/>
+<p>Leica MP .72 Rangefinder Film Camera, Black</p>
+</a>
+</section>
 </body>
 </html>
