--- a/login.html
+++ b/login.html
@@ -18,5 +18,18 @@
 <a href="signup.html">Sign Up</a>
 </nav>
 </header>
+<section class="white" id="login">
+<h1>Login</h1>
+<form>
+<input type="email" placeholder="email"/>
+<br/>
+<input type="password" placeholder="password"/>
+<br/>
+<button type="submit">Submit</button>
+</form>
+<aside>
+<a href="signup.html">Sign up</a>
+</aside>
+</section>
 </body>
 </html>
