--- a/results.html
+++ b/results.html
@@ -4,6 +4,21 @@
 <meta charset="UTF-8">
 <title>Results</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<link href="css/searchMeme.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/jquery.searchMeme.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var search = $('input').searchMeme({ onSearch: function (searchText) {
+                setTimeout(function () {
+                    search.searchMeme({ searchComplete: true });
+                    alert('Search completed.');
+                }, 3000);
+            }
+            , buttonPlacement: 'left', button: 'red'
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -19,37 +34,37 @@
 </nav>
 </header>
 
-<section id="white">
-
-<div>
+<section class="white" id="results">
+<input type="text" />
+<div class="results">
 <a href="details.html">
 <img src="Images/Leica.png"/>
 <p>Leica MP .72 Rangefinder Film Camera, Black</p>
 </a>
 </div>
 
-<div>
+<div class="results">
 <a href="details.html">
 <img src="Images/Fujifilm.png"/>
 <p>Fujifilm GF670 Professional Camera with Lens</p>
 </a>
 </div>
 
-<div>
+<div class="results">
 <a href="details.html">
 <img src="Images/Horseman.png"/>
 <p>Horseman SW-612 Pro Medium Format Panorama Camera with 65mm Grandagon-N Lens</p>
 </a>
 </div>
 
-<div>
+<div class="results">
 <a href="details.html">
 <img src="Images/Toyo.png"/>
 <p>Toyo 45CF Field Camera</p>
 </a>
 </div>
 
-<div>
+<div class="results">
 <a href="details.html">
 <img src="Images/Nikon.png"/>
 <p>Nikon FM-10 Body with 35-70 f/3.5-4.8 and Black and White Filters</p>
