--- a/signup.html
+++ b/signup.html
@@ -18,5 +18,17 @@
 <a href="signup.html">Sign Up</a>
 </nav>
 </header>
+<section class="white">
+<h1>Sign Up</h1>
+<form>
+<input type="email" placeholder="email"/>
+<br/>
+<input type="password" placeholder="password"/>
+<br/>
+<input type="password" placeholder="confirm password"/>
+<br/>
+<button type="submit">Submit</button>
+</form>
+</section>
 </body>
 </html>
