Fix validation erors

--- a/favorites.html
+++ b/favorites.html
@@ -21,7 +21,7 @@
 <section class="white" id="favorites">
 <h1>Favorites</h1>
 <a href="details.html">
-<img src="Images/Leica.png"/>
+<img src="Images/Leica.png" alt="Leica Camera"/>
 <p>Leica MP .72 Rangefinder Film Camera, Black</p>
 </a>
 </section>
