--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 <h1 id="huge">
 Find the best cameras with <br/>Neil Lane
 </h1>
-<form>
-<input type="search" />
+<form action="results.html">
+<input type="search"/>
 <button type="submit">
-<a href="results.html">
-Search Now!</a>
+Search Now!
 </button>
 </form>
 </section>
