--- a/details.html
+++ b/details.html
@@ -19,12 +19,12 @@
 </nav>
 </header>
 <section class="white" id="details">
-<img src="Images/Leica_Large.png"/>
+<img src="Images/Leica_Large.png" alt="Leica Camera"/>
 <h2>Leica MP .72 Rangefinder Film Camera, Black</h2>
 Item: LC4916   Mfr: 10302
 <br/>
 By Leica
-<button><a href="favorites.html">Add to favorites</a></button>
+<form action="favorites.html"><button>Add to favorites</button></form>
 <br/>
 This product hasn't been rated yet. <a href="login.html">Write a Review</a>
 <br/>
