--- a/results.html
+++ b/results.html
@@ -35,38 +35,38 @@
 </header>
 
 <section class="white" id="results">
-<input type="text" />
+<form  action="results.html"><input type="text" /></form>
 <div class="results">
 <a href="details.html">
-<img src="Images/Leica.png"/>
+<img src="Images/Leica.png" alt="Leica Camera"/>
 <p>Leica MP .72 Rangefinder Film Camera, Black</p>
 </a>
 </div>
 
 <div class="results">
 <a href="details.html">
-<img src="Images/Fujifilm.png"/>
+<img src="Images/Fujifilm.png" alt="Fujifilm Camera"/>
 <p>Fujifilm GF670 Professional Camera with Lens</p>
 </a>
 </div>
 
 <div class="results">
 <a href="details.html">
-<img src="Images/Horseman.png"/>
+<img src="Images/Horseman.png" alt="Horseman Camera"/>
 <p>Horseman SW-612 Pro Medium Format Panorama Camera with 65mm Grandagon-N Lens</p>
 </a>
 </div>
 
 <div class="results">
 <a href="details.html">
-<img src="Images/Toyo.png"/>
+<img src="Images/Toyo.png" alt="Toyo Camera"/>
 <p>Toyo 45CF Field Camera</p>
 </a>
 </div>
 
 <div class="results">
 <a href="details.html">
-<img src="Images/Nikon.png"/>
+<img src="Images/Nikon.png" alt="Nikon Camera"/>
 <p>Nikon FM-10 Body with 35-70 f/3.5-4.8 and Black and White Filters</p>
 </a>
 </div>
