rearranged file structure

--- a/favorites.html
+++ b/favorites.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Favorites</title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <header>
-<img id="Logo" src="Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
+<img id="Logo" src="Images/Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
 <nav>
 <a href="index.html">Home</a>
 <a href="results.html">Results</a>
