--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Results</title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="css/searchMeme.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.searchMeme.js" type="text/javascript"></script>
@@ -23,7 +23,7 @@
 
 <body>
 <header>
-<img id="Logo" src="Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
+<img id="Logo" src="Images/Neil_Lane_Logo.svg" alt="Neil Lane Logo"/>
 <nav>
 <a href="index.html">Home</a>
 <a href="results.html">Results</a>
